# necrophagy

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  cabal.project  necrophagy.cabal  saturnine.cabal
.github/workflows/: ci.yml
app/: Main.hs
examples/: Indifferent.hs  SecondStone.hs  Stabwound.hs
src/: Necrophagy.hs  Saturnine.hs
