cabal-version:       2.4
name:                necrophagy
version:             0.1.0.0
synopsis:            A type-level Haskell EDSL for programming guitar tablature.
description:         A type-level Haskell EDSL for programming guitar tablature.
homepage:            https://github.com/RiugaBachi/necrophagy
bug-reports:         https://github.com/RiugaBachi/necropagy/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Riuga
maintainer:          Riuga <riuga@tuta.io>
copyright:           2020 Riuga
category:            Application, Music
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/RiugaBachi/necrophagy.git

common common-options
  build-depends:       base >= 4.13 && < 5,
  default-language:    Haskell2010

library
  import:              common-options

  default-extensions:
    ExistentialQuantification RankNTypes GADTs PolyKinds
    DataKinds TypeFamilies MultiParamTypeClasses 
    TypeApplications TypeOperators UndecidableInstances 
    OverloadedStrings RebindableSyntax NoStarIsType 
    ConstraintKinds AllowAmbiguousTypes TypeFamilyDependencies
    NoMonomorphismRestriction PartialTypeSignatures

  build-depends:       text,
                       midi,
                       Euterpea
                       
  allow-newer:         True

  ghc-options:         -Wall
                       -Wno-unused-do-bind
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  hs-source-dirs:      src
  exposed-modules:     Necrophagy

library necrophagy-examples
  import:              common-options
  hs-source-dirs:      examples
  exposed-modules:     Stabwound,
                       SecondStone
  build-depends:       necrophagy
