cabal-version:       2.4
name:                saturnine
version:             0.0.0.0
synopsis:            A readable Haskell EDSL for programming guitar tablature.
description:         A readable Haskell EDSL for programming guitar tablature.
homepage:            https://github.com/Riuga/saturnine
bug-reports:         https://github.com/Riuga/saturnine/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Riuga
maintainer:          Riuga <riuga@tuta.io>
copyright:           2020 Riuga
category:            Application, Music
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/Riuga/saturnine.git

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Saturnine

executable saturnine
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       saturnine
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
